force-app/main/default/objects/BWP_Processor_Config__c/BWP_Processor_Config__c.object-meta.xml
<CustomObject>
    <label>BWP Processor Config</label>
    <nameField>
        <label>BWP Processor Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BWP Processor Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>