force-app/main/default/objects/BWP_Processor_Config__c/fields/Card_Creation_Key__c.field-meta.xml
<CustomField>
    <fullName>Card_Creation_Key__c</fullName>
    <description>This field is used while card creation using JS.</description>
    <label>Card Creation Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>