force-app/main/default/objects/BWP_Processor_Config__c/fields/Customer_Match_Config__c.field-meta.xml
<CustomField>
    <fullName>Customer_Match_Config__c</fullName>
    <description>Used to show the Customers in Account or Contact Match based on the configuration values stored.</description>
    <label>Customer Match Config</label>
    <length>255</length>
    <type>Text</type>
</CustomField>