force-app/main/default/objects/BWP_Processor_Config__c/fields/Historical_Customer_Sync_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Historical_Customer_Sync_Last_Run__c</fullName>
    <label>Historical Customer Sync Last Run</label>
    <type>DateTime</type>
</CustomField>