force-app/main/default/objects/BWP_Processor_Config__c/fields/Hourly_Payment_Sync_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Payment_Sync_Last_Run__c</fullName>
    <description>We are replacing Hourly words with Regular everywhere in the app.</description>
    <label>Regular Payment Sync Last Run</label>
    <type>DateTime</type>
</CustomField>