force-app/main/default/objects/BWP_Processor_Config__c/fields/Is_Customer_Match_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_Match_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Customer Match Completed</label>
    <type>Checkbox</type>
</CustomField>