force-app/main/default/objects/BWP_Processor_Config__c/fields/Live_Mode__c.field-meta.xml
<CustomField>
    <fullName>Live_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Live Mode</label>
    <type>Checkbox</type>
</CustomField>